[gd_scene load_steps=8 format=3 uid="uid://c5oxpu8tkcjdx"]

[ext_resource type="Texture2D" uid="uid://cc2fs8maasyhr" path="res://assets/images/characters/ice_mage/idle 1.png" id="1_lf5i1"]
[ext_resource type="Script" uid="uid://bb7bwmxnp8438" path="res://scripts/character_option.gd" id="1_shq8t"]
[ext_resource type="Texture2D" uid="uid://df54o1bwnpw0x" path="res://assets/images/characters/ice_mage/idle 2.png" id="2_ylst1"]
[ext_resource type="Texture2D" uid="uid://bhs28qj6xk3rv" path="res://assets/images/enemies/ghost/ghost_idle.png" id="3_cpe7j"]
[ext_resource type="Texture2D" uid="uid://cbcryd7fqjuqv" path="res://assets/images/enemies/ghost/ghost_attack.png" id="4_shq8t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lf5i1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lf5i1")
}, {
"duration": 1.0,
"texture": ExtResource("2_ylst1")
}],
"loop": true,
"name": &"ice_mage",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_shq8t")
}, {
"duration": 1.0,
"texture": ExtResource("3_cpe7j")
}],
"loop": true,
"name": &"knight",
"speed": 2.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylst1"]
size = Vector2(16, 32)

[node name="CharacterOptionSprite" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_lf5i1")
animation = &"ice_mage"
script = ExtResource("1_shq8t")

[node name="CharacterOptionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterOptionArea"]
shape = SubResource("RectangleShape2D_ylst1")

[connection signal="body_entered" from="CharacterOptionArea" to="." method="_on_character_option_area_body_entered"]
